User and admin login and sign up functionality added

--- a/Site1.Master
+++ b/Site1.Master
@@ -66,7 +66,7 @@
                           </li>
 
                           <li class="nav-item active">
-                              <asp:LinkButton class="nav-link" ID="LinkButton3" runat="server" Visible="False">Logout</asp:LinkButton>
+                              <asp:LinkButton class="nav-link" ID="LinkButton3" runat="server" Visible="False" OnClick="LinkButton3_Click">Logout</asp:LinkButton>
                           </li>
 
                           <li class="nav-item active">
