--- a/Site1.Master
+++ b/Site1.Master
@@ -11,13 +11,16 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <%--fontawesome css--%> 
     <link href="fontawesome/css/all.css" rel="stylesheet" />
+    <%--datatables js--%>
+    <script src="datatables/js/dataTables.min.js"></script>
     <%--bootstrap js--%> 
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <%--popper js--%> 
     <script src="bootstrap/js/popper.min.js"></script>
-
+    <%--jquery js--%> 
+    <script src="bootstrap/js/jquery-3.7.1.min.js"></script>
     <link href="css/customstylesheet.css" rel="stylesheet" />
-
+    
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -27,7 +30,7 @@
         <div>
             <nav class="navbar navbar-expand-lg navbar-light">
                 <a class="navbar-brand" href="#">
-                    <img src="imgs/books.png" width="30" height="30" />
+                    <img src="imgs/books.png" width="20" height="20" />
                     E-Library
                 </a>
 
@@ -70,7 +73,7 @@
                           </li>
 
                           <li class="nav-item active">
-                              <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" Visible="False">Hello User</asp:LinkButton>
+                              <asp:LinkButton class="nav-link" ID="LinkButton7" runat="server" Visible="False" OnClick="LinkButton7_Click">Hello User</asp:LinkButton>
                           </li>
 
                       </ul>
